--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,10 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,700&family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -30,14 +34,14 @@
       <load srs="partials/how-its-made.html" />
       <load srs="partials/our-products.html" />
       <load srs="partials/top-sellers.html" />
+      <load srs="partials/reviews.html" />
       <load srs="partials/subscribe.html" />
     </main>
 
     <load srs="partials/footer.html" />
 
     <!-- Loads the specified .html file -->
-
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script type="module" src="/main.js"></script>
-    <script type="module" src="/js/mobile-menu.js"></script>
   </body>
 </html>
