--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,6 @@
 
     <!-- Loads the specified .html file -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-    <script type="module" src="/main.js"></script>
+    <script type="module" defer src="/main.js"></script>
   </body>
 </html>
