--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,8 @@
     </main>
 
     <load srs="partials/footer.html" />
+    <load srs="partials/overlay.html" />
+    <load srs="partials/pop-up.html" />
 
     <!-- Loads the specified .html file -->
     <script
