--- a/src/index.html
+++ b/src/index.html
@@ -38,10 +38,7 @@
     <load srs="partials/pop-up.html" />
 
     <!-- Loads the specified .html file -->
-    <script
-      defer
-      src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script type="module" defer src="/main.js"></script>
   </body>
 </html>
